Implement basic navigation and welcome screen
This commit introduces the following changes:

-   **Navigation:** Added the `navigation-compose` library as a dependency and implemented basic navigation between screens using `NavHost`.
-   **Welcome Screen:** Created a new `WelcomeScreen` composable that serves as the initial screen.
-    **Restaurant Screen** Renamed `Restaurant` class to `RestaurantScreen` to fit naming conventions.
-   **Screen Titles:** Added string resources for "Restaurants" and updated the `MyCityScreens` enum to include corresponding title strings.
-   **Window Size Handling:** Passed the `WindowSizeClass` to each screen to handle different screen sizes.
-   **Removed Redundancies**: Removed unnecessary imports and code
-   **Improved common Views**: Updated `CommonView` to look better.
-   **Added a Next Button**: You can now navigate to the restaurant page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="glasgow">Glasgow</string>
 
     <!-- Restaurants -->
+    <string name="restaurant_title">Restaurants</string>
     <string name="kg_name">Kitchen Glasgow</string>
     <string name="kg_location">11 N Gower St, Glasgow G51 1PW</string>
     <string name="kg_description">"Kitchen Glasgow is a restaurant based in Glasgow.\nThey are popular for their; Breakfast, Lunch, Dinner and Solo Dining.\nThey offer; Coffee, Halal Food, Healthy Options, Quick Bites, Small Plates, Vegan Options and Vegetarian Options.\nCome on down and give them a try, they support payments of; Cash, Credit Cards, Debit Cards, NFC Payments, Google and Apple Pay."</string>
