--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,16 @@
     <string name="my_city">My City</string>
     <string name="glasgow">Glasgow</string>
 
+    <!-- List Of Actions -->
+    <string name="loa_title">What would you like to do?</string>
+    <string name="loa_subtext">Where to?</string>
+    
+    <string name="coffee_shops">Coffee Shops</string>
+    <string name="restaurants">Restaurants</string>
+    <string name="kid_friendly_places">Kid Friendly Places</string>
+    <string name="parks">Parks</string>
+    <string name="shopping_centers">Shopping Centers</string>
+
     <!-- Restaurants -->
     <string name="restaurant_title">Restaurants</string>
     <string name="kg_name">Kitchen Glasgow</string>
